<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/PA_add_event_button"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/addEventTitle"
        app:showAsAction="always" />
    <item
        android:id="@+id/PA_day_button"
        android:icon="@drawable/ic_baseline_today_24"
        android:title="@string/dayPlannerTitle"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/PA_week_button"
        android:icon="@drawable/ic_baseline_calendar_view_day_24"
        android:title="@string/weekPlannerTitle"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/PA_month_button"
        android:icon="@drawable/ic_baseline_calendar_24"
        android:title="@string/monthPlannerTitle"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/PA_home_button"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/homeTitle"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/PA_settings_button"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settingsTitle"
        app:showAsAction="ifRoom" />
</menu>